# cattower

./: .gitignore  CMakeLists.txt  LICENSE.txt  Main.qml  README.md  cattower.code-workspace  go.mod  go.sum  install.go  main.cpp  main.go
config/: config.go
hardware/: common.go  hardware.go  hardware_unix.go
influxdb/: config.go  influxdb.go
leds/: config.go  leds.go
motion/: config.go  motion.go
server/: api.go  api_leds.go  api_motion.go  api_sensors.go  api_system.go  api_videos.go  config.go  server.go
ui/: package-lock.json  package.json  tailwind.config.js  webpack.common.js  webpack.dev.js
ui/public/: index.html
ui/src/: index.css  index.tsx
ui/src/components/: App.tsx  BigButton.tsx  Button.tsx  Clock.tsx  ColorChooser.tsx  MotionLog.tsx  Navbar.tsx  SensorOverview.tsx  Volume.tsx
ui/src/routes/: index.tsx  leds.tsx  sensors.tsx  videos.tsx
